packages/llvm/src/tests/variable_declaration/snapshots/llvm__tests__variable_declaration__variable_assignment__const _x = 1            let x  = (_x);            x = (1 + 1);            .snap
---
source: packages/llvm/src/tests/variable_declaration/variable_assignment.rs
expression: output

---
; ModuleID = 'main'
source_filename = "main"

define void @main() {
entry:
  %_x_ = alloca double, align 8
  store double 1.000000e+00, double* %_x_, align 8
  %x_ = alloca double, align 8
  %"1" = load double, double* %_x_, align 8
  store double %"1", double* %x_, align 8
  store double 2.000000e+00, double* %x_, align 8
  ret void
}

define void @__typescript__personality() {
entry:
  ret void
}

