packages/llvm/src/tests/variable_declaration/snapshots/llvm__tests__variable_declaration__variable_assignment__const _x = true            let x  = (_x);            x = (1 < 2);            .snap
---
source: packages/llvm/src/tests/variable_declaration/variable_assignment.rs
expression: output

---
; ModuleID = 'main'
source_filename = "main"

define void @main() {
entry:
  %_x_ = alloca i1, align 1
  store i1 true, i1* %_x_, align 1
  %x_ = alloca i1, align 1
  %"1" = load i1, i1* %_x_, align 1
  store i1 %"1", i1* %x_, align 1
  store i1 true, i1* %x_, align 1
  ret void
}

define void @__typescript__personality() {
entry:
  ret void
}

